added viglink code to index.html for viglink approval

--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,17 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+		<script type="text/javascript">
+			var vglnk = {key: '1af437edcfa778cd907ad82d25b3a970'};
+			(function(d, t) {
+				var s = d.createElement(t);
+					s.type = 'text/javascript';
+					s.async = true;
+					s.src = '//cdn.viglink.com/api/vglnk.js';
+				var r = d.getElementsByTagName(t)[0];
+					r.parentNode.insertBefore(s, r);
+			}(document, 'script'));
+		</script>
   </body>
 </html>
